<resources>

    <string name="app_name">PhishApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="re_pass">Retype Password</string>
    <string name="credentials_key">Credentials Key</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>

    <string name="login_frag">Login Fragment</string>
    <string name="register_frag">Register Fragment</string>
    <string name="success_frag">Success Fragment</string>
    <string name="title_activity_home">Home Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Phish App</string>
    <string name="nav_header_subtitle">TCSS 450 Labs</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_blog">Blog Posts</string>
    <string name="menu_setlists">Set Lists</string>
    <string name="full_content">Full Content</string>
    <string name="blog_key">Blog Blog Blog</string>
    <string name="action_logout">Logout</string>

    <string name="menu_chat">Global Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
